# hello-window

./: .gitignore  CMakeLists.txt
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: CMakeLists.txt  glad.c
lib/stb_image/: CMakeLists.txt
shader/: minimal.frag  simple.frag  simple.vert  vertex-simple.vert
src/: main.cpp  shader.hpp
